@@ -2,6 +2,7 @@
 AGM_ATAN_LIMIT                     159      89      56      60
 DIVRR_GMP_LIMIT                     -1       4      -1       4
 EXPNEWTON_LIMIT                     66     197      66      66
+EXTGCD_HALFGCD_LIMIT               320      -1     548      -1
 F2x_MUL_KARATSUBA_LIMIT             13      13      11      11
 F2x_MUL_MULII_LIMIT               6265     774     662      41
 F2xqX_BARRETT_LIMIT                 58      48      56      48
@@ -56,6 +57,8 @@ FpX_INVBARRETT_LIMIT               337     121     254     111
 FpX_REM_BARRETT_LIMIT              306     127     306     111
 Fp_POW_BARRETT_LIMIT                97      11     101     127
 Fp_POW_REDC_LIMIT                   99       3      99      17
+GCD_HALFGCD_LIMIT                  170      -1     141      -1
+HALFGCD_LIMIT                       12      22       6       3
 INVMOD_GMP_LIMIT                    -1       3      -1       3
 INVNEWTON_LIMIT                     66      93     550      75
 LOGAGMCX_LIMIT                      58      32      13      22
