@@ -2,6 +2,7 @@
 #define __AGM_ATAN_LIMIT                 56
 #define __DIVRR_GMP_LIMIT                -1
 #define __EXPNEWTON_LIMIT                66
+#define __EXTGCD_HALFGCD_LIMIT           548
 #define __F2x_MUL_KARATSUBA_LIMIT        11
 #define __F2x_MUL_MULII_LIMIT            662
 #define __F2xqX_BARRETT_LIMIT            56
@@ -56,6 +57,8 @@
 #define __FpX_REM_BARRETT_LIMIT          306
 #define __Fp_POW_BARRETT_LIMIT           101
 #define __Fp_POW_REDC_LIMIT              99
+#define __GCD_HALFGCD_LIMIT              141
+#define __HALFGCD_LIMIT                  6
 #define __INVMOD_GMP_LIMIT               -1
 #define __INVNEWTON_LIMIT                550
 #define __LOGAGMCX_LIMIT                 13
@@ -72,6 +75,7 @@
 #define __AGM_ATAN_LIMIT                 159
 #define __DIVRR_GMP_LIMIT                -1
 #define __EXPNEWTON_LIMIT                66
+#define __EXTGCD_HALFGCD_LIMIT           320
 #define __F2x_MUL_KARATSUBA_LIMIT        13
 #define __F2x_MUL_MULII_LIMIT            6265
 #define __F2xqX_BARRETT_LIMIT            58
@@ -126,6 +130,8 @@
 #define __FpX_REM_BARRETT_LIMIT          306
 #define __Fp_POW_BARRETT_LIMIT           97
 #define __Fp_POW_REDC_LIMIT              99
+#define __GCD_HALFGCD_LIMIT              170
+#define __HALFGCD_LIMIT                  12
 #define __INVMOD_GMP_LIMIT               -1
 #define __INVNEWTON_LIMIT                66
 #define __LOGAGMCX_LIMIT                 58
