@@ -145,4 +145,42 @@ Mod(0, 3)
 38807730709203142810389700524543565487
 1
 1
+[[-173, 281; 338, -549], [1355, 409]~]
+[[9, -12*x - 8; -189*x + 180, 252*x^2 - 72*x + 36], [28*x^3 + 36*x^2 - 6*x +
+ 11, 846*x^2 - 351*x + 612]~]
+[[Mod(1, 5), Mod(2, 5)*x + Mod(3, 5); Mod(1, 5)*x, Mod(2, 5)*x^2 + Mod(3, 5)
+*x + Mod(1, 5)], [Mod(2, 5)*x^3 + Mod(4, 5)*x^2 + Mod(1, 5)*x + Mod(4, 5), M
+od(1, 5)*x^2 + Mod(4, 5)*x + Mod(2, 5)]~]
+[[1, (2*a^4 + 3)*x + (4*a^4 + a^3 + 3); (3*a^4 + 2*a^2 + 2*a)*x + (a^3 + 4*a
+^2 + 4*a + 1), (a^3 + 4*a + 4)*x^2 + (4*a^2 + 2*a + 1)*x + (3*a^4 + 3*a^3 + 
+3*a^2 + 4*a + 4)], [(4*a^4 + a^3 + 2)*x^3 + (4*a + 4)*x^2 + (4*a^4 + 2)*x + 
+(2*a^3 + 4*a + 2), (2*a^4 + 2*a^3 + 4*a^2 + 2)*x^2 + (4*a^4 + a^2 + 4)*x + (
+2*a^4 + a^2 + 4*a + 2)]~]
+[[Mod(9*a^2, a^5 + 4*a + 4), Mod(-12*a, a^5 + 4*a + 4)*x + Mod(-12*a^2 + 4, 
+a^5 + 4*a + 4); Mod(-27*a^3 + 648*a + 648, a^5 + 4*a + 4)*x + Mod(-54*a^4 - 
+981*a^2 - 1944*a - 972, a^5 + 4*a + 4), Mod(216*a^4 + 36*a^2, a^5 + 4*a + 4)
+*x^2 + Mod(-324*a^4 + 36*a^3 + 432*a + 432, a^5 + 4*a + 4)*x + Mod(324*a^4 +
+ 108*a^3 + 1332*a^2 + 2592*a + 1296, a^5 + 4*a + 4)], [Mod(24*a^2 + 4, a^5 +
+ 4*a + 4)*x^3 + Mod(36*a^3 + 36*a^2, a^5 + 4*a + 4)*x^2 + Mod(-6*a^2 - 24*a,
+ a^5 + 4*a + 4)*x + Mod(-24*a^3 + 3*a^2 + 8*a + 8, a^5 + 4*a + 4), Mod(216*a
+^4 - 3906*a^3 - 11628*a^2 - 11232*a - 3456, a^5 + 4*a + 4)*x^2 + Mod(-684*a^
+4 - 9*a^3 - 1098*a^2 + 2376*a + 3456, a^5 + 4*a + 4)*x + Mod(702*a^4 + 2880*
+a^3 + 4905*a^2 - 648*a - 2916, a^5 + 4*a + 4)]~]
+[[Mod(1, 340282366920938463463374607431768211507), Mod(113427455640312821154
+458202477256070501, 340282366920938463463374607431768211507)*x + Mod(3024732
+15040834189745221873272682854672, 340282366920938463463374607431768211507); 
+Mod(12152941675747802266549093122563150410, 34028236692093846346337460743176
+8211507)*x + Mod(118057147707264364875048333190613461136, 340282366920938463
+463374607431768211507), Mod(97223533405982418132392744980505203289, 34028236
+6920938463463374607431768211507)*x^2 + Mod(208336143012819467426555882101082
+57847, 340282366920938463463374607431768211507)*x + Mod(15972437630982825836
+0359509610829976830, 340282366920938463463374607431768211507)], [Mod(3024732
+15040834189745221873272682854676, 340282366920938463463374607431768211507)*x
+^3 + Mod(4, 340282366920938463463374607431768211507)*x^2 + Mod(1134274555346
+75271135439085685864136723, 340282366920938463463374607431768211507)*x + Mod
+(302473214970409156417655872818797783769, 3402823669209384634633746074317682
+11507), Mod(253475640767461799077792376319445073291, 34028236692093846346337
+4607431768211507)*x^2 + Mod(26042017847498210446107919259235987210, 34028236
+6920938463463374607431768211507)*x + Mod(22222521922822621008747897876480424
+7837, 340282366920938463463374607431768211507)]~]
 Total time spent: 4
