@@ -231,6 +231,8 @@ BA  77- [libpari] forqfvec1, pariplot, sumdivmultexpr
 BA  79- nfisincl: new flag: return a single embedding
 BA  80- [libpari] FpXC_to_mod, FpXM_to_mod, FqXC_to_mod, FqXM_to_mod
 BA  81- [libpari] FFX_add
+BA  82- [libpari] halfgcdii, RgX_halfgcd
+BA  83- new GP function halfgcd
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
